Orginiz pom and refactoring

--- a/avis-application/pom.xml
+++ b/avis-application/pom.xml
@@ -11,30 +11,17 @@
 
     <artifactId>avis-application</artifactId>
 
-    <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-
     <dependencies>
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>fr.esgi</groupId>
+            <artifactId>avis-web</artifactId>
+            <version>${avis.web}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-        <dependency>
-            <groupId>fr.esgi</groupId>
-            <artifactId>avis-web</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-        <!--<dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-        </dependency>-->
     </dependencies>
 
     <build>
