--- a/avis-web/pom.xml
+++ b/avis-web/pom.xml
@@ -7,22 +7,22 @@
         <groupId>fr.esgi</groupId>
         <artifactId>avis-parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-<!--        <relativePath>../pom.xml</relativePath>-->
     </parent>
 
     <artifactId>avis-web</artifactId>
 
-    <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-
     <dependencies>
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-data-rest</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>fr.esgi</groupId>
+            <artifactId>avis-domain</artifactId>
+            <version>${avis.domain}</version>
+        </dependency>
+        <dependency>
+            <groupId>fr.esgi</groupId>
+            <artifactId>avis-usecase</artifactId>
+            <version>${avis.usecase}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -32,38 +32,8 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
         <dependency>
-            <groupId>fr.esgi</groupId>
-            <artifactId>avis-domaine</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
-        <dependency>
-            <groupId>fr.esgi</groupId>
-            <artifactId>avis-usecase</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-<!--            <scope>compile</scope>-->
-        </dependency>
     </dependencies>
-
-    <!--<dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-dependencies</artifactId>
-                <version>3.4.3</version>
-                <scope>import</scope>
-                <type>pom</type>
-            </dependency>
-            <dependency>
-                <groupId>org.projectlombok</groupId>
-                <artifactId>lombok</artifactId>
-                <version>1.18.30</version>
-                <scope>provided</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>-->
-
 </project>
