--- a/avis-usecase/pom.xml
+++ b/avis-usecase/pom.xml
@@ -17,6 +17,12 @@
             <artifactId>avis-persistance</artifactId>
             <version>${avis.persistance}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
