Add Cycle Avoiding Mapping

--- a/avis-web/src/main/resources/application.properties
+++ b/avis-web/src/main/resources/application.properties
@@ -6,3 +6,5 @@
 spring.thymeleaf.prefix=file:/avis-web/src/main/resources/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
+
+springdoc.swagger-ui.try-it-out-enabled=true
