feat: update configuration, mappings, pagination, and add performance monitoring
  - Add log/ directory to .gitignore
  - Configure Swagger UI with custom API documentation paths
  - Make `editeur` field in Jeu class optional
  - Enhance `JeuMapper` with null-checks
  - Add `CheckPointFilter` class for request timestamping (performance monitoring)
  - Fix HTML markup issues and improve pagination logic in `jeux.html`

--- a/avis-web/src/main/resources/application.properties
+++ b/avis-web/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
 
 springdoc.swagger-ui.try-it-out-enabled=true
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
