feat(upload): implémentation du pattern décorateur pour le téléversement des images + ex. AWS S3
  - Ajout un exemple du module `avis-cloud` pour gérer le téléversement des fichiers vers AWS S3 avec le décorateur `FilesS3BucketDecorator`.
  - Modification majeure du port `FileUploader` : simplification de la méthode upload en supprimant la dépendance au modèle `Jeu`.
  - Création de décorateurs `FileUploaderWebDecorator` et `FileUploaderSystem` pour téléversement web et local, respectivement.
  - Suppression de l'ancien adaptateur `FileUploaderAdapter` devenu obsolète.
  - Mise à jour du service `JeuService` et de l'implémentation `JeuUseCase` pour utiliser les nouveaux décorateurs.
  - Réorganisation du code et corrections mineures pour améliorer la lisibilité et l'adaptabilité au pattern Clean Architecture.

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>avis-persistance</module>
         <module>avis-usecase</module>
         <module>avis-application</module>
+        <module>avis-cloud</module>
     </modules>
 
     <properties>
@@ -71,6 +72,12 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.14.0</version>
         </dependency>
 
         <dependency>
