--- a/avis-domain/pom.xml
+++ b/avis-domain/pom.xml
@@ -31,6 +31,11 @@
             <version>${junit-jupiter.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>fr.esgi</groupId>
+            <artifactId>avis-parent</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
