Fix : add parent to avis-domain pom

--- a/avis-domain/pom.xml
+++ b/avis-domain/pom.xml
@@ -3,8 +3,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>fr.esgi</groupId>
+        <artifactId>avis-parent</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+    </parent>
 
-    <groupId>fr.esgi</groupId>
     <artifactId>avis-domain</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
@@ -30,11 +34,6 @@
             <artifactId>junit-jupiter</artifactId>
             <version>${junit-jupiter.version}</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>fr.esgi</groupId>
-            <artifactId>avis-parent</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
