--- a/.github/workflows/owasp-check.yml
+++ b/.github/workflows/owasp-check.yml
@@ -6,25 +6,27 @@ on:
   pull_request:
     branches: [ main, master ]
   schedule:
-    - cron: '0 0 * * 6-7'
+    - cron: '0 2 * * 1,2,3,4,5'
 
 jobs:
   owasp-check:
     runs-on: ubuntu-latest
-    
+
     steps:
     - uses: actions/checkout@v4
-    
+
     - name: Set up JDK 21
       uses: actions/setup-java@v4
       with:
         java-version: '21'
         distribution: 'temurin'
         cache: maven
-    
+
     - name: Run OWASP Dependency Check
-      run: mvn org.owasp:dependency-check-maven:check
-    
+      run: mvn org.owasp:dependency-check-maven:check -Dnvd.api.key=$NVD_API_KEY
+      env:
+        NVD_API_KEY: ${{ secrets.NVD_API_KEY }}
+
     - name: Archive OWASP results
       uses: actions/upload-artifact@v3
       with:
