--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <avis.persistance>0.0.1-SNAPSHOT</avis.persistance>
         <avis.web>0.0.1-SNAPSHOT</avis.web>
         <junit-jupiter.version>5.12.0</junit-jupiter.version>
+        <nvd.api.key>${env.NVD_API_KEY}</nvd.api.key>
     </properties>
 
     <dependencyManagement>
@@ -212,7 +213,7 @@
                 <plugin>
                     <groupId>org.owasp</groupId>
                     <artifactId>dependency-check-maven</artifactId>
-                    <version>9.0.10</version>
+                    <version>12.1.1</version>
                     <configuration>
                         <failBuildOnCVSS>8</failBuildOnCVSS>
                         <formats>
@@ -221,6 +222,8 @@
                             <format>JSON</format>
                         </formats>
                         <outputDirectory>${project.build.directory}/dependency-check</outputDirectory>
+                        <!-- Add NVD API Key configuration -->
+                        <nvdApiKey>${nvd.api.key}</nvdApiKey>
                         <scanSet>
                             <fileSet>
                                 <directory>${project.basedir}</directory>
@@ -240,6 +243,14 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+        
+        <plugins>
+            <plugin>
+                <groupId>org.owasp</groupId>
+                <artifactId>dependency-check-maven</artifactId>
+            </plugin>
+        </plugins>
+        
     </build>
 
 </project>
