add version for childs modules

--- a/avis-cloud/pom.xml
+++ b/avis-cloud/pom.xml
@@ -19,6 +19,7 @@
     </dependencies>
 
     <artifactId>avis-cloud</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
 
     <build>
         <plugins>
