--- a/avis-persistance/pom.xml
+++ b/avis-persistance/pom.xml
@@ -10,6 +10,7 @@
     </parent>
 
     <artifactId>avis-persistance</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
