--- a/.github/workflows/owasp-check.yml
+++ b/.github/workflows/owasp-check.yml
@@ -16,14 +16,14 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Set up JDK 21
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
         java-version: '21'
         distribution: 'temurin'
         cache: maven
 
     - name: Run OWASP Dependency Check
-      run: mvn org.owasp:dependency-check-maven:check -Dnvd.api.key=$NVD_API_KEY
+      run: mvn dependency-check:check -Dnvd.api.key=$NVD_API_KEY
       env:
         NVD_API_KEY: ${{ secrets.NVD_API_KEY }}
 
