--- a/.github/workflows/owasp-check.yml
+++ b/.github/workflows/owasp-check.yml
@@ -22,6 +22,9 @@ jobs:
         distribution: 'temurin'
         cache: maven
 
+    - name: Build project first
+      run: mvn clean install -DskipTests
+      
     - name: Run OWASP Dependency Check
       run: mvn dependency-check:check -Dnvd.api.key=$NVD_API_KEY
       env:
