Add coverage for TU

--- a/.github/workflows/owasp-check.yml
+++ b/.github/workflows/owasp-check.yml
@@ -2,7 +2,7 @@ name: OWASP Dependency Check
 
 on:
   push:
-    branches: [ main, master, 'feature/*', 'feature_*' ]
+    branches: [ 'feature/*', 'feature_*' ]
   pull_request:
     branches: [ main, master ]
   schedule:
