feat: prise en charge du téléversement d’images + refonte UI & mise à jour technique
Principales modifications
-------------------------
- **JeuService** : nouvelle méthode `ajouterImage(Long, MultipartFile)`
- **JeuUseCase** : implémentation complète (validation, builder, logs)
- **FileUploaderWebDecorator / FileUploaderSystem** : gestion native de `MultipartFile`, création auto du répertoire `uploads`, logs via Lombok

- **JeuMapper** : support de `Genre`, méthodes de mapping list → list avec `CycleAvoidingMappingContext`
- **JeuRepositoryAdapter** : simplification en s’appuyant sur les nouvelles méthodes de mapping

- `Editeur` passe en **@Builder**, suppression des `@NonNull` inutiles sur `nom` (Editeur & Jeu)

- **JeuController** : endpoints pour création de jeu + upload d’image multipart
- Nouveaux services injectés : `EditeurService`, `PlateformeService`
- **Templates Thymeleaf** : refonte complète (Bootstrap 5, FontAwesome, validation live, feedbacks)
- **WebConfig** : resource handler `/uploads/** → file:uploads/`

- **JeuUseCaseTest** mis à jour (genre, plateformes, tests d’erreur d’upload)

- `spring-web` ajouté dans *avis-domain/pom.xml*
- Passage **JDK 21 → 23** dans `.idea/misc.xml`
- `spring.jpa.show-sql` désactivé, niveau `org.hibernate.SQL_SLOW` → `warn`
- Nettoyage fichiers IDEA inutiles (.gitignore, uiDesigner, etc.)

Motivation
----------
Permettre le dépôt d’illustrations de jeux directement depuis l’interface web, améliorer l’ergonomie UI, préparer l’intégration des genres, et aligner le projet sur JDK 23 tout en allégeant la configuration et les logs.

Closes #XX

--- a/avis-application/src/main/resources/application.properties
+++ b/avis-application/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=avis
 
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
@@ -26,7 +26,7 @@ logging.pattern.console= %d %p %c{1.} [%t] %m%n
 
 spring.jpa.properties.hibernate.session.events.log.LOG_QUERIES_SLOWER_THAN_MS=100
 
-logging.level.org.hibernate.SQL_SLOW=info
+logging.level.org.hibernate.SQL_SLOW=warn
 #spring.jpa.properties.hibernate.format_sql=true
 #logging.level.org.springframework.orm.jpa=DEBUG
 #logging.level.fr.esgi.fx.avis=DEBUG
